--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&family=Inter:wght@300;400;500;600&display=swap&subset=vietnamese"
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&family=Inter:wght@300;400;500;600&family=Jost:wght@300;400;500;600;700&display=swap&subset=vietnamese"
         rel="stylesheet">
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="project-detail.css">
@@ -98,7 +98,8 @@
                     window.history.replaceState({}, '', url.toString());
                 } catch { }
             }
-            console.log('Loading Project ID:', projectId); // Debug log
+
+
 
             const project = PROJECTS_DATA[projectId];
 
