refactor: cleanup unused files & update founder awards
- Removed 5 unused files: script.js, projects.json, styles.css, download-staff-photos.js, upscale-staff-photos.js
- Updated Vo Trong Nghia awards: fixed Fukuoka Prize year (2025), added Asia's Most Influential Designer (2021)
- Added gemini.md project rules

--- a/about.html
+++ b/about.html
@@ -63,8 +63,9 @@
                         <div class="founder-awards">
                             <h4 class="awards-label" data-i18n="about.founder.awardsLabel">Giải thưởng tiêu biểu</h4>
                             <ul class="awards-list">
+                                <li><span class="award-year">2025</span> Fukuoka Prize (Arts & Culture)</li>
+                                <li><span class="award-year">2021</span> Asia's Most Influential Designer</li>
                                 <li><span class="award-year">2019</span> Dezeen Architect of The Year</li>
-                                <li><span class="award-year">2018</span> Fukuoka Prize</li>
                                 <li><span class="award-year">2016</span> Prince Claus Award</li>
                                 <li><span class="award-year">2014</span> WEF Young Global Leader</li>
                                 <li><span class="award-year">Multiple</span> ARCASIA Gold Medal</li>
